@@ -23,7 +23,7 @@ import org.w3c.dom.NodeList;
 import java.util.Map;
 
 import org.apache.solr.common.SolrException;
-import org.apache.solr.common.util.DOMUtil;
+import org.apache.solr.util.DOMUtil;
 import org.apache.solr.core.SolrConfig;
 import org.apache.solr.core.SolrResourceLoader;
 
